# pmm_uav_planner

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
Mk/: libs_flags.mk  recipe.mk
config/planner/: planner_config.yaml
config/waypoints/: cuboid.yaml  eight.yaml  hypotrochoid.yaml  race.yaml  slalom.yaml
include/: common.hpp  pmm_mg_trajectory3d.hpp  pmm_trajectory.hpp  pmm_trajectory3d.hpp
scripts/: plot_profiles.py  plot_trajectory.py
scripts/trajectory_data/: README.md
src/: common.cpp  main.cpp  pmm_mg_trajectory3d.cpp  pmm_trajectory.cpp  pmm_trajectory3d.cpp
